# rust-memcache-proto

./: .travis.yml  Cargo.toml  LICENSE  LICENSE-MIT  README.md
benches/: request.rs  response.rs
examples/: extras.rs  request.rs  request_builder.rs
src/: command.rs  errors.rs  lib.rs  request.rs  response.rs
src/extras/: flush.rs  get.rs  incr.rs  increment.rs  mod.rs  set.rs  traits.rs  verbosity.rs
src/extras/tests/: expiration.rs  get.rs  incr.rs  mod.rs  set.rs
src/request/: builder.rs  io.rs  mod.rs
src/request/tests/: mod.rs  serialization.rs
src/response/: mod.rs
src/tests/: request.rs  response.rs
src_legacy/: lib.rs
src_legacy/extras/: mod.rs  traits.rs
src_legacy/request/: mod.rs
src_legacy/request/tests/: serialization.rs
