[package]
name = "memcache-proto"
description = "Memcached binary protocol"
documentation = "https://docs.rs/memcache-proto"
repository = "https://github.com/svartalf/rust-memcache-proto"
version = "0.1.0"
license = "MIT/Apache-2.0"
authors = ["svartalf <self@svartalf.info>"]
keywords = ["memcached", "memcache", "binary", "protocol"]
categories = ["database"]

[dependencies]
# TODO: Check if patch version may be dropped from these dependencies
enum_primitive = "0.1.1"
byteorder = "1.2.1"
bytes = "0.4.5"
serde = "1.0"

[badges]
travis-ci = { repository = "svartalf/rust-memcache-proto", branch = "master" }
